--- a/main.html
+++ b/main.html
@@ -8,6 +8,84 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	
+	 <table class="middle" id="table-1">    <!--Table 1-->
+		 <caption>HTML Assignment#3</caption>
+		<tr >
+			<td id="left">left</td>
+			<td class="center">center</td>
+			<td class="right">right</td>
+		</tr>
+		 <tr>
+			<td id="left">left</td>
+			<td class="center">center</td>
+			<td class="right">right</td>
+		</tr>
+		 <tr>
+			<td id="left">left</td>
+			<td class="center">center</td>
+			<td class="right">right</td>
+		</tr>
+	</table>
+	<br>
+	<br>
+	<!--TABLE-2-->
+	<table class="middle" id="table-2">
+		<tr>
+			<td colspan="6"></td>
+			
+		</tr>
+		<tr>
+			<td rowspan="4"></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			
+			<td></td>
+			<td colspan="3"></td>
+			<td></td>
+			
+		</tr>
+		<tr>
+			
+			<td></td>
+			<td colspan="3"></td>
+			<td></td>
+			
+		</tr>
+		<tr>
+			
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td colspan="6"></td>
+			
+		</tr>
+		
+	</table>
+	<!--Table-3-->
+	<br>
+	<br>
+	<table class="middle"id="table-3">
+		<tr>
+			<td class="green"></td>
+		</tr>
+		<tr>
+			<td id="t-image"><img src="https://user-images.githubusercontent.com/78348500/217435540-555a8eb0-79a6-4590-90c0-28b620341d42.png" height="200px"></td>
+		</tr>
+		<tr>
+			<td class="blue"></td>
+		</tr>
+		
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
