--- a/main.html
+++ b/main.html
@@ -12,19 +12,19 @@
 	 <table class="middle" id="table-1">    <!--Table 1-->
 		 <caption>HTML Assignment#3</caption>
 		<tr >
-			<td id="left">left</td>
-			<td class="center">center</td>
-			<td class="right">right</td>
+			<td id="t11">left</td>
+			<td class="center" id="t12">center</td>
+			<td class="right" id="t13">right</td>
 		</tr>
 		 <tr>
-			<td id="left">left</td>
-			<td class="center">center</td>
-			<td class="right">right</td>
+			<td id="11">left</td>
+			<td class="center" id="t12">center</td>
+			<td class="right" id="t13">right</td>
 		</tr>
 		 <tr>
-			<td id="left">left</td>
-			<td class="center">center</td>
-			<td class="right">right</td>
+			<td id="t11">left</td>
+			<td class="center" id="t12">center</td>
+			<td class="right" id="t13">right</td>
 		</tr>
 	</table>
 	<br>
@@ -32,7 +32,7 @@
 	<!--TABLE-2-->
 	<table class="middle" id="table-2">
 		<tr>
-			<td colspan="6"></td>
+			<td colspan="6" id="t21"></td>
 			
 		</tr>
 		<tr>
